<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.2</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com</groupId>
    <artifactId>server</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>server</name>
    <description>Sample project to test graalvm on aws lambda</description>
    <properties>
        <java.version>21</java.version>
        <aws.serverless.spring.version>2.0.0</aws.serverless.spring.version>
        <aws.sdk.java.version>2.24.1</aws.sdk.java.version>
        <spring-cloud.version>2022.0.5</spring-cloud.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>software.amazon.awssdk</groupId>
                <artifactId>bom</artifactId>
                <version>${aws.sdk.java.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- aws -->
        <dependency>
            <groupId>com.amazonaws.serverless</groupId>
            <artifactId>aws-serverless-java-container-springboot3</artifactId>
            <version>${aws.serverless.spring.version}</version>
        </dependency>
        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-lambda-java-events</artifactId>
            <version>3.11.4</version>
        </dependency>
        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-lambda-java-core</artifactId>
            <version>1.2.3</version>
            <scope>provided</scope>
        </dependency>

        <!-- test -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <!-- Failed to execute goal org.springframework.boot:spring-boot-maven-plugin:3.1.4:repackage (repackage) on project -->
    <!-- server: Execution repackage of goal org.springframework.boot:spring-boot-maven-plugin:3.1.4:repackage failed: -->
    <!-- Unable to find main class -> [Help 1] -->
    <!-- https://docs.spring.io/spring-boot/docs/current/maven-plugin/reference/htmlsingle/ -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <mainClass>com.sse.Application</mainClass>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>

                    <image>
                        <name>docker.io/emmanuelu17/${project.artifactId}:latest</name>
                    </image>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <configuration>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>module-info.class</exclude>
                            </excludes>
                        </filter>
                    </filters>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <artifactSet>
                                <excludes>
                                    <exclude>org.apache.tomcat.embed:*</exclude>
                                </excludes>
                            </artifactSet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <profiles>
        <!-- native profile -->
<!--        <profile>-->
<!--            <id>native</id>-->
<!--            <activation>-->
<!--                <property>-->
<!--                    <name>native</name>-->
<!--                </property>-->
<!--                <activeByDefault>true</activeByDefault>-->
<!--            </activation>-->

<!--            <properties>-->
<!--                <spring.profiles.active>default</spring.profiles.active>-->
<!--            </properties>-->

<!--            <build>-->
<!--                <plugins>-->
<!--                    <plugin>-->
<!--                        <groupId>org.graalvm.buildtools</groupId>-->
<!--                        <artifactId>native-maven-plugin</artifactId>-->
<!--                        <configuration>-->
<!--                            <buildArgs>-->
<!--                                <buildArg>&#45;&#45;enable-url-protocols=http &#45;&#45;enable-preview -march=compatibility</buildArg>-->
<!--                            </buildArgs>-->
<!--                        </configuration>-->
<!--                        <executions>-->
<!--                            <execution>-->
<!--                                <goals>-->
<!--                                    <goal>build</goal>-->
<!--                                </goals>-->
<!--                                <phase>package</phase>-->
<!--                            </execution>-->
<!--                            <execution>-->
<!--                                <id>test</id>-->
<!--                                <goals>-->
<!--                                    <goal>test</goal>-->
<!--                                </goals>-->
<!--                                <phase>test</phase>-->
<!--                            </execution>-->
<!--                        </executions>-->
<!--                    </plugin>-->

<!--                    <plugin>-->
<!--                        <artifactId>maven-assembly-plugin</artifactId>-->
<!--                        <executions>-->
<!--                            <execution>-->
<!--                                <id>native-zip</id>-->
<!--                                <phase>package</phase>-->
<!--                                <goals>-->
<!--                                    <goal>single</goal>-->
<!--                                </goals>-->
<!--                                <inherited>false</inherited>-->
<!--                            </execution>-->
<!--                        </executions>-->
<!--                        <configuration>-->
<!--                            <descriptors>-->
<!--                                <descriptor>src/assembly/native.xml</descriptor>-->
<!--                            </descriptors>-->
<!--                        </configuration>-->
<!--                    </plugin>-->
<!--                </plugins>-->
<!--            </build>-->
<!--        </profile>-->

        <!-- native ecr profile -->
        <profile>
            <id>native</id>
            <activation>
                <property>
                    <name>native</name>
                </property>
                <activeByDefault>true</activeByDefault>
            </activation>

            <properties>
                <spring.profiles.active>default</spring.profiles.active>
            </properties>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <configuration>
                            <buildArgs>
                                <buildArg>--enable-url-protocols=http --enable-preview -march=compatibility</buildArg>
                            </buildArgs>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>build</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                            <execution>
                                <id>test</id>
                                <goals>
                                    <goal>test</goal>
                                </goals>
                                <phase>test</phase>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
